--- a/assets/css/src/design.css
+++ b/assets/css/src/design.css
@@ -7,7 +7,7 @@
 }
 
 .banner {
-	background-image: url('../images/banner.jpg');
+	background-image: url('../../images/banner.jpg');
 	height: 400px;
 	background-size: cover;
 }
